--- a/exopapers.bib
+++ b/exopapers.bib
@@ -63,6 +63,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Aigrain15,
+   author = {{Aigrain}, S. and {Hodgkin}, S.~T. and {Irwin}, M.~J. and {Lewis}, J.~R. and 
+	{Roberts}, S.~J.},
+    title = "{Precise time series photometry for the Kepler-2.0 mission}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1412.6304},
+ primaryClass = "astro-ph.IM",
+ keywords = {methods: data analysis, techniques: photometric},
+     year = 2015,
+    month = mar,
+   volume = 447,
+    pages = {2880-2893},
+      doi = {10.1093/mnras/stu2638},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.447.2880A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @inproceedings{Aldering02,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -175,6 +194,45 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...751L..16A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Armstrong15a,
+   author = {{Armstrong}, D.~J. and {Kirk}, J. and {Lam}, K.~W.~F. and {McCormac}, J. and 
+	{Walker}, S.~R. and {Brown}, D.~J.~A. and {Osborn}, H.~P. and 
+	{Pollacco}, D.~L. and {Spake}, J.},
+    title = "{K2 Variable Catalogue II: Variable Stars and Eclipsing Binaries in K2 Fields 1 and 0}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1502.04004},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150204004A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Armstrong15b,
+   author = {{Armstrong}, D.~J. and {Veras}, D. and {Barros}, S.~C.~C. and 
+	{Demangeon}, O. and {McCormac}, J. and {Osborn}, H.~P. and {Lillo-Box}, J. and 
+	{Santerne}, A. and {Tsantaki}, M. and {Almenara}, J.-M. and 
+	{Barrado}, D. and {Boisse}, I. and {Bonomo}, A.~S. and {Bouchy}, F. and 
+	{Brown}, D.~J.~A. and {Bruno}, G. and {Rey Cerda}, J. and {Courcol}, B. and 
+	{Deleuil}, M. and {D{\'{\i}}az}, R.~F. and {Doyle}, A.~P. and 
+	{H{\'e}brard}, G. and {Kirk}, J. and {Lam}, K.~W.~F. and {Pollacco}, D.~L. and 
+	{Rajpurohit}, A. and {Spake}, J. and {Walker}, S.~R.},
+    title = "{One of the closest planet pairs to the 3:2 Mean Motion Resonance, confirmed with K2 observations and Transit Timing Variations: EPIC201505350}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1503.00692},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150300692A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @ARTICLE{Apps10,
    author = {{Apps}, K. and {Clubb}, K.~I. and {Fischer}, D.~A. and {Gaidos}, E. and 
@@ -301,6 +359,15 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@misc{Barentsen15,
+  author       = {Barentsen, Geert},
+  title        = {K2flix: Kepler pixel data visualizer},
+  month        = feb, 
+  journal      = {},
+  year         = 2015,
+  doi          = {10.5281/zenodo.15576},
+  url          = {http://dx.doi.org/10.5281/zenodo.15576}
+}
 
 @ARTICLE{Bastien13,
    author = {{Bastien}, F.~A. and {Stassun}, K.~G. and {Basri}, G. and {Pepper}, J.
@@ -475,6 +542,22 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Boisse11,
+   author = {{Boisse}, I. and {Bouchy}, F. and {H{\'e}brard}, G. and {Bonfils}, X. and 
+	{Santos}, N. and {Vauclair}, S.},
+    title = "{Disentangling between stellar activity and planetary signals}",
+  journal = {\aap},
+ keywords = {techniques: radial velocities, stars: activity, stars: individual:{$\iota$}Hor, stars: individual: HD 189733, stars: individual: GJ 674, stars: individual: CoRoT-7},
+     year = 2011,
+    month = apr,
+   volume = 528,
+      eid = {A4},
+    pages = {A4},
+      doi = {10.1051/0004-6361/201014354},
+   adsurl = {http://adsabs.harvard.edu/abs/2011A%26A...528A...4B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Bonfils05,
    author = {{Bonfils}, X. and {Forveille}, T. and {Delfosse}, X. and {Udry}, S. and 
@@ -557,8 +640,38 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Borucki11a,
+   author = {{Borucki}, W.~J. and {Koch}, D.~G. and {Basri}, G. and {Batalha}, N. and 
+	{Boss}, A. and {Brown}, T.~M. and {Caldwell}, D. and {Christensen-Dalsgaard}, J. and 
+	{Cochran}, W.~D. and {DeVore}, E. and {Dunham}, E.~W. and {Dupree}, A.~K. and 
+	{Gautier}, III, T.~N. and {Geary}, J.~C. and {Gilliland}, R. and 
+	{Gould}, A. and {Howell}, S.~B. and {Jenkins}, J.~M. and {Kjeldsen}, H. and 
+	{Latham}, D.~W. and {Lissauer}, J.~J. and {Marcy}, G.~W. and 
+	{Monet}, D.~G. and {Sasselov}, D. and {Tarter}, J. and {Charbonneau}, D. and 
+	{Doyle}, L. and {Ford}, E.~B. and {Fortney}, J. and {Holman}, M.~J. and 
+	{Seager}, S. and {Steffen}, J.~H. and {Welsh}, W.~F. and {Allen}, C. and 
+	{Bryson}, S.~T. and {Buchhave}, L. and {Chandrasekaran}, H. and 
+	{Christiansen}, J.~L. and {Ciardi}, D. and {Clarke}, B.~D. and 
+	{Dotson}, J.~L. and {Endl}, M. and {Fischer}, D. and {Fressin}, F. and 
+	{Haas}, M. and {Horch}, E. and {Howard}, A. and {Isaacson}, H. and 
+	{Kolodziejczak}, J. and {Li}, J. and {MacQueen}, P. and {Meibom}, S. and 
+	{Prsa}, A. and {Quintana}, E.~V. and {Rowe}, J. and {Sherry}, W. and 
+	{Tenenbaum}, P. and {Torres}, G. and {Twicken}, J.~D. and {Van Cleve}, J. and 
+	{Walkowicz}, L. and {Wu}, H.},
+    title = "{Characteristics of Kepler Planetary Candidates Based on the First Data Set}",
+  journal = {\apj},
+ keywords = {planets and satellites: detection, surveys},
+     year = 2011,
+    month = feb,
+   volume = 728,
+      eid = {117},
+    pages = {117},
+      doi = {10.1088/0004-637X/728/2/117},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...728..117B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
-@ARTICLE{Borucki11,
+@ARTICLE{Borucki11b,
    author = {{Borucki}, W.~J. and {Koch}, D.~G. and {Basri}, G. and {Batalha}, N. and 
 	{Brown}, T.~M. and {Bryson}, S.~T. and {Caldwell}, D. and {Christensen-Dalsgaard}, J. and 
 	{Cochran}, W.~D. and {DeVore}, E. and {Dunham}, E.~W. and {Gautier}, III, T.~N. and 
@@ -784,6 +897,36 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...785...48B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Burke14,
+   author = {{Burke}, C.~J. and {Bryson}, S.~T. and {Mullally}, F. and {Rowe}, J.~F. and 
+	{Christiansen}, J.~L. and {Thompson}, S.~E. and {Coughlin}, J.~L. and 
+	{Haas}, M.~R. and {Batalha}, N.~M. and {Caldwell}, D.~A. and 
+	{Jenkins}, J.~M. and {Still}, M. and {Barclay}, T. and {Borucki}, W.~J. and 
+	{Chaplin}, W.~J. and {Ciardi}, D.~R. and {Clarke}, B.~D. and 
+	{Cochran}, W.~D. and {Demory}, B.-O. and {Esquerdo}, G.~A. and 
+	{Gautier}, III, T.~N. and {Gilliland}, R.~L. and {Girouard}, F.~R. and 
+	{Havel}, M. and {Henze}, C.~E. and {Howell}, S.~B. and {Huber}, D. and 
+	{Latham}, D.~W. and {Li}, J. and {Morehead}, R.~C. and {Morton}, T.~D. and 
+	{Pepper}, J. and {Quintana}, E. and {Ragozzine}, D. and {Seader}, S.~E. and 
+	{Shah}, Y. and {Shporer}, A. and {Tenenbaum}, P. and {Twicken}, J.~D. and 
+	{Wolfgang}, A.},
+    title = "{Planetary Candidates Observed by Kepler IV: Planet Sample from Q1-Q8 (22 Months)}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1312.5358},
+ primaryClass = "astro-ph.EP",
+ keywords = {catalogs, eclipses, planetary systems, space vehicles},
+     year = 2014,
+    month = feb,
+   volume = 210,
+      eid = {19},
+    pages = {19},
+      doi = {10.1088/0067-0049/210/2/19},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJS..210...19B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{Burrows01,
@@ -1833,6 +1976,23 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{Ferreira00,
+   author = {{Ferreira}, P.~G. and {Jaffe}, A.~H.},
+    title = "{Simultaneous estimation of noise and signal in cosmic microwave background experiments}",
+  journal = {\mnras},
+   eprint = {astro-ph/9909250},
+ keywords = {COSMIC MICROWAVE BACKGROUND},
+     year = 2000,
+    month = feb,
+   volume = 312,
+    pages = {89-102},
+      doi = {10.1046/j.1365-8711.2000.03108.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2000MNRAS.312...89F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Fischer92,
    author = {{Fischer}, D.~A. and {Marcy}, G.~W.},
     title = "{Multiplicity among M dwarfs}",
@@ -2327,6 +2487,21 @@ booktitle = {Arva: Ontario Gray, 1988},
 }
 
 
+@ARTICLE{Grunblatt15,
+   author = {{Grunblatt}, S.~K. and {Howard}, A.~W. and {Haywood}, R.~D.},
+    title = "{Measuring the Mass of Kepler-78b Using a Gaussian Process Model}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1501.00369},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150100369G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Haghighipour10,
    author = {{Haghighipour}, N. and {Vogt}, S.~S. and {Butler}, R.~P. and 
 	{Rivera}, E.~J. and {Laughlin}, G. and {Meschiari}, S. and {Henry}, G.~W.
@@ -2385,6 +2560,28 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2001PASP..113..105H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Haywood14,
+   author = {{Haywood}, R.~D. and {Collier Cameron}, A. and {Queloz}, D. and 
+	{Barros}, S.~C.~C. and {Deleuil}, M. and {Fares}, R. and {Gillon}, M. and 
+	{Lanza}, A.~F. and {Lovis}, C. and {Moutou}, C. and {Pepe}, F. and 
+	{Pollacco}, D. and {Santerne}, A. and {S{\'e}gransan}, D. and 
+	{Unruh}, Y.~C.},
+    title = "{Planets and stellar activity: hide and seek in the CoRoT-7 system}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1407.1044},
+ primaryClass = "astro-ph.EP",
+ keywords = {techniques: radial velocities, stars: activity, stars: individual: CoRoT-7, planetary systems},
+     year = 2014,
+    month = sep,
+   volume = 443,
+    pages = {2517-2531},
+      doi = {10.1093/mnras/stu1320},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.443.2517H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Henry96,
    author = {{Henry}, T.~J. and {Soderblom}, D.~R. and {Donahue}, R.~A. and 
@@ -2668,6 +2865,29 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2012ApJS..201...15H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Howell14,
+   author = {{Howell}, S.~B. and {Sobeck}, C. and {Haas}, M. and {Still}, M. and 
+	{Barclay}, T. and {Mullally}, F. and {Troeltzsch}, J. and {Aigrain}, S. and 
+	{Bryson}, S.~T. and {Caldwell}, D. and {Chaplin}, W.~J. and 
+	{Cochran}, W.~D. and {Huber}, D. and {Marcy}, G.~W. and {Miglio}, A. and 
+	{Najita}, J.~R. and {Smith}, M. and {Twicken}, J.~D. and {Fortney}, J.~J.
+	},
+    title = "{The K2 Mission: Characterization and Early Results}",
+  journal = {\pasp},
+archivePrefix = "arXiv",
+   eprint = {1402.5163},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astronomical Instrumentation},
+     year = 2014,
+    month = apr,
+   volume = 126,
+    pages = {398-408},
+      doi = {10.1086/676406},
+   adsurl = {http://adsabs.harvard.edu/abs/2014PASP..126..398H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Huber13,
    author = {{Huber}, D. and {Carter}, J.~A. and {Barbieri}, M. and {Miglio}, A. and 
@@ -4056,6 +4276,36 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Mullaly15,
+   author = {{Mullally}, F. and {Coughlin}, J.~L. and {Thompson}, S.~E. and 
+	{Rowe}, J. and {Burke}, C. and {Latham}, D.~W. and {Batalha}, N.~M. and 
+	{Bryson}, S.~T. and {Christiansen}, J. and {Henze}, C.~E. and 
+	{Ofir}, A. and {Quarles}, B. and {Shporer}, A. and {Van Eylen}, V. and 
+	{Van Laerhoven}, C. and {Shah}, Y. and {Wolfgang}, A. and {Chaplin}, W.~J. and 
+	{Xie}, J.-W. and {Akeson}, R. and {Argabright}, V. and {Bachtell}, E. and 
+	{Borucki}, T.~B.~W.~J. and {Caldwell}, D.~A. and {Campbell}, J.~R. and 
+	{Catanzarite}, J.~H. and {Cochran}, W.~D. and {Duren}, R.~M. and 
+	{Fleming}, S.~W. and {Fraquelli}, D. and {Girouard}, F.~R. and 
+	{Haas}, M.~R. and {He{\l}miniak}, K.~G. and {Howell}, S.~B. and 
+	{Huber}, D. and {Larson}, K. and {Gautier}, III, T.~N. and {Jenkins}, J. and 
+	{Li}, J. and {Lissauer}, J.~J. and {McArthur}, S. and {Miller}, C. and 
+	{Morris}, R.~L. and {Patil-Sabale}, A. and {Plavchan}, P. and 
+	{Putnam}, D. and {Quintana}, E.~V. and {Ramirez}, S. and {Silva Aguirre}, V. and 
+	{Seader}, S. and {Smith}, J.~C. and {Steffen}, J.~H. and {Stewart}, C. and 
+	{Stober}, J. and {Still}, M. and {Tenenbaum}, P. and {Troeltzsch}, J. and 
+	{Twicken}, J.~D. and {Zamudio}, K.~A.},
+    title = "{Planetary Candidates Observed by Kepler VI: Planet Sample from Q1-Q16 (47 Months)}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1502.02038},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150202038M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @BOOK{MDSSD,
    author = {{Murray}, C.~D. and {Dermott}, S.~F.},
@@ -4620,6 +4870,34 @@ archivePrefix = "arXiv",
       doi = {10.1063/1.1741967}
 }
 
+@ARTICLE{Rowe15,
+   author = {{Rowe}, J.~F. and {Coughlin}, J.~L. and {Antoci}, V. and {Barclay}, T. and 
+	{Batalha}, N.~M. and {Borucki}, W.~J. and {Burke}, C.~J. and 
+	{Bryson}, S.~T. and {Caldwell}, D.~A. and {Campbell}, J.~R. and 
+	{Catanzarite}, J.~H. and {Christiansen}, J.~L. and {Cochran}, W. and 
+	{Gilliland}, R.~L. and {Girouard}, F.~R. and {Haas}, M.~R. and 
+	{Helminiak}, K.~G. and {Henze}, C.~E. and {Hoffman}, K.~L. and 
+	{Howell}, S.~B. and {Huber}, D. and {Hunter}, R.~C. and {Jang-Condell}, H. and 
+	{Jenkins}, J.~M. and {Klaus}, T.~C. and {Latham}, D.~W. and 
+	{Li}, J. and {Lissauer}, J.~J. and {McCauliff}, S.~D. and {Morris}, R.~L. and 
+	{Mullally}, F. and {Ofir}, A. and {Quarles}, B. and {Quintana}, E. and 
+	{Sabale}, A. and {Seader}, S. and {Shporer}, A. and {Smith}, J.~C. and 
+	{Steffen}, J.~H. and {Still}, M. and {Tenenbaum}, P. and {Thompson}, S.~E. and 
+	{Twicken}, J.~D. and {Van Laerhoven}, C. and {Wolfgang}, A. and 
+	{Zamudio}, K.~A.},
+    title = "{Planetary Candidates Observed by Kepler V: Planet Sample from Q1-Q12 (36 Months)}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1501.07286},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150107286R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Scholz10,
    author = {{Scholz}, R.-D.},
     title = "{Hip 63510C, Hip 73786B, and nine new isolated high proper motion T dwarf candidates from UKIDSS DR6 and SDSS DR7}",
@@ -5115,6 +5393,54 @@ archivePrefix = "arXiv",
     pages = {1085-1098},
       doi = {10.1088/0004-637X/694/2/1085},
    adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...694.1085V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Vanderburg14,
+   author = {{Vanderburg}, A. and {Johnson}, J.~A.},
+    title = "{A Technique for Extracting Highly Precise Photometry for the Two-Wheeled Kepler Mission}",
+  journal = {\pasp},
+archivePrefix = "arXiv",
+   eprint = {1408.3853},
+ primaryClass = "astro-ph.IM",
+ keywords = {Data Analysis and Techniques},
+     year = 2014,
+    month = dec,
+   volume = 126,
+    pages = {948-958},
+      doi = {10.1086/678764},
+   adsurl = {http://adsabs.harvard.edu/abs/2014PASP..126..948V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Vanderburg15,
+   author = {{Vanderburg}, A. and {Montet}, B.~T. and {Johnson}, J.~A. and 
+	{Buchhave}, L.~A. and {Zeng}, L. and {Pepe}, F. and {Collier Cameron}, A. and 
+	{Latham}, D.~W. and {Molinari}, E. and {Udry}, S. and {Lovis}, C. and 
+	{Matthews}, J.~M. and {Cameron}, C. and {Law}, N. and {Bowler}, B.~P. and 
+	{Angus}, R. and {Baranec}, C. and {Bieryla}, A. and {Boschin}, W. and 
+	{Charbonneau}, D. and {Cosentino}, R. and {Dumusque}, X. and 
+	{Figueira}, P. and {Guenther}, D.~B. and {Harutyunyan}, A. and 
+	{Hellier}, C. and {Kuschnig}, R. and {Lopez-Morales}, M. and 
+	{Mayor}, M. and {Micela}, G. and {Moffat}, A.~F.~J. and {Pedani}, M. and 
+	{Phillips}, D.~F. and {Piotto}, G. and {Pollacco}, D. and {Queloz}, D. and 
+	{Rice}, K. and {Riddle}, R. and {Rowe}, J.~F. and {Rucinski}, S.~M. and 
+	{Sasselov}, D. and {S{\'e}gransan}, D. and {Sozzetti}, A. and 
+	{Szentgyorgyi}, A. and {Watson}, C. and {Weiss}, W.~W.},
+    title = "{Characterizing K2 Planet Discoveries: A Super-Earth Transiting the Bright K Dwarf HIP{\nbsp}116454}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1412.5674},
+ primaryClass = "astro-ph.EP",
+ keywords = {planets and satellites: detection, techniques: photometric },
+     year = 2015,
+    month = feb,
+   volume = 800,
+      eid = {59},
+    pages = {59},
+      doi = {10.1088/0004-637X/800/1/59},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...59V},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
