--- a/exopapers.bib
+++ b/exopapers.bib
@@ -4199,6 +4199,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Morton11b,
+   author = {{Morton}, T.~D. and {Johnson}, J.~A.},
+    title = "{On the Low False Positive Probabilities of Kepler Planet Candidates}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1101.5630},
+ primaryClass = "astro-ph.EP",
+ keywords = {methods: statistical, planets and satellites: general, stars: statistics},
+     year = 2011,
+    month = sep,
+   volume = 738,
+      eid = {170},
+    pages = {170},
+      doi = {10.1088/0004-637X/738/2/170},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...738..170M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Morton13,
    author = {{Morton}, T.~D. and {Swift}, J.~J.},
     title = "{The Radius Distribution of Small Planets Around Cool Stars}",
