Some words on multis.

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1896,24 +1896,30 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Fabrycky12b,
+@ARTICLE{Fabrycky14,
    author = {{Fabrycky}, D.~C. and {Lissauer}, J.~J. and {Ragozzine}, D. and 
-	{Rowe}, J.~F. and {Agol}, E. and {Barclay}, T. and {Batalha}, N. and 
-	{Borucki}, W. and {Ciardi}, D.~R. and {Ford}, E.~B. and {Geary}, J.~C. and 
-	{Holman}, M.~J. and {Jenkins}, J.~M. and {Li}, J. and {Morehead}, R.~C. and 
-	{Shporer}, A. and {Smith}, J.~C. and {Steffen}, J.~H. and {Still}, M.
+	{Rowe}, J.~F. and {Steffen}, J.~H. and {Agol}, E. and {Barclay}, T. and 
+	{Batalha}, N. and {Borucki}, W. and {Ciardi}, D.~R. and {Ford}, E.~B. and 
+	{Gautier}, T.~N. and {Geary}, J.~C. and {Holman}, M.~J. and 
+	{Jenkins}, J.~M. and {Li}, J. and {Morehead}, R.~C. and {Morris}, R.~L. and 
+	{Shporer}, A. and {Smith}, J.~C. and {Still}, M. and {Van Cleve}, J.
 	},
-    title = "{Architecture of Kepler's Multi-transiting Systems: II. New investigations with twice as many candidates}",
-  journal = {ArXiv e-prints},
+    title = "{Architecture of Kepler's Multi-transiting Systems. II. New Investigations with Twice as Many Candidates}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1202.6328},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
-     year = 2012,
-    month = feb,
-   adsurl = {http://adsabs.harvard.edu/abs/2012arXiv1202.6328F},
+ keywords = {methods: statistical, planetary systems, planets and satellites: detection, planets and satellites: dynamical evolution and stability},
+     year = 2014,
+    month = aug,
+   volume = 790,
+      eid = {146},
+    pages = {146},
+      doi = {10.1088/0004-637X/790/2/146},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...790..146F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Faherty09,
    author = {{Faherty}, J.~K. and {Burgasser}, A.~J. and {Cruz}, K.~L. and 
@@ -3603,7 +3609,7 @@ archivePrefix = "arXiv",
 
 
 
-@ARTICLE{Lissauer11,
+@ARTICLE{Lissauer11a,
    author = {{Lissauer}, J.~J. and {Fabrycky}, D.~C. and {Ford}, E.~B. and 
 	{Borucki}, W.~J. and {Fressin}, F. and {Marcy}, G.~W. and {Orosz}, J.~A. and 
 	{Rowe}, J.~F. and {Torres}, G. and {Welsh}, W.~F. and {Batalha}, N.~M. and 
@@ -3627,6 +3633,31 @@ archivePrefix = "arXiv",
     pages = {53-58},
       doi = {10.1038/nature09760},
    adsurl = {http://adsabs.harvard.edu/abs/2011Natur.470...53L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Lissauer11b,
+   author = {{Lissauer}, J.~J. and {Ragozzine}, D. and {Fabrycky}, D.~C. and 
+	{Steffen}, J.~H. and {Ford}, E.~B. and {Jenkins}, J.~M. and 
+	{Shporer}, A. and {Holman}, M.~J. and {Rowe}, J.~F. and {Quintana}, E.~V. and 
+	{Batalha}, N.~M. and {Borucki}, W.~J. and {Bryson}, S.~T. and 
+	{Caldwell}, D.~A. and {Carter}, J.~A. and {Ciardi}, D. and {Dunham}, E.~W. and 
+	{Fortney}, J.~J. and {Gautier}, III, T.~N. and {Howell}, S.~B. and 
+	{Koch}, D.~G. and {Latham}, D.~W. and {Marcy}, G.~W. and {Morehead}, R.~C. and 
+	{Sasselov}, D.},
+    title = "{Architecture and Dynamics of Kepler's Candidate Multiple Transiting Planet Systems}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1102.0543},
+ primaryClass = "astro-ph.EP",
+ keywords = {celestial mechanics, planets and satellites: dynamical evolution and stability, planets and satellites: fundamental parameters, planets and satellites: general, planetary systems},
+     year = 2011,
+    month = nov,
+   volume = 197,
+      eid = {8},
+    pages = {8},
+      doi = {10.1088/0067-0049/197/1/8},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJS..197....8L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -4888,6 +4919,32 @@ archivePrefix = "arXiv",
     pages = {356},
       doi = {10.1063/1.1741967}
 }
+
+@ARTICLE{Rowe14,
+   author = {{Rowe}, J.~F. and {Bryson}, S.~T. and {Marcy}, G.~W. and {Lissauer}, J.~J. and 
+	{Jontof-Hutter}, D. and {Mullally}, F. and {Gilliland}, R.~L. and 
+	{Issacson}, H. and {Ford}, E. and {Howell}, S.~B. and {Borucki}, W.~J. and 
+	{Haas}, M. and {Huber}, D. and {Steffen}, J.~H. and {Thompson}, S.~E. and 
+	{Quintana}, E. and {Barclay}, T. and {Still}, M. and {Fortney}, J. and 
+	{Gautier}, III, T.~N. and {Hunter}, R. and {Caldwell}, D.~A. and 
+	{Ciardi}, D.~R. and {Devore}, E. and {Cochran}, W. and {Jenkins}, J. and 
+	{Agol}, E. and {Carter}, J.~A. and {Geary}, J.},
+    title = "{Validation of Kepler's Multiple Planet Candidates. III. Light Curve Analysis and Announcement of Hundreds of New Multi-planet Systems}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1402.6534},
+ primaryClass = "astro-ph.EP",
+ keywords = {planetary systems, planets and satellites: fundamental parameters},
+     year = 2014,
+    month = mar,
+   volume = 784,
+      eid = {45},
+    pages = {45},
+      doi = {10.1088/0004-637X/784/1/45},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...784...45R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Rowe15,
    author = {{Rowe}, J.~F. and {Coughlin}, J.~L. and {Antoci}, V. and {Barclay}, T. and 
