Updates from ShareLaTeX

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -360,13 +360,17 @@ archivePrefix = "arXiv",
 }
 
 @misc{Barentsen15,
-  author       = {Barentsen, Geert},
-  title        = {K2flix: Kepler pixel data visualizer},
-  month        = feb, 
-  journal      = {},
-  year         = 2015,
-  doi          = {10.5281/zenodo.15576},
-  url          = {http://dx.doi.org/10.5281/zenodo.15576}
+  author        = {{Barentsen}, G.},
+  title         = "{K2flix: Kepler pixel data visualizer}",
+  howpublished  = {Astrophysics Source Code Library},
+  year          = 2015,
+  month         = mar,
+  archivePrefix = "ascl",
+  eprint        = {1503.001},
+  adsurl        = {http://adsabs.harvard.edu/abs/2015ascl.soft03001B},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  doi           = {10.5281/zenodo.15576},
+  url           = {http://dx.doi.org/10.5281/zenodo.15576}
 }
 
 @ARTICLE{Bastien13,
