Section 5 done, modulo one maybe subsection.

--- a/ms.tex
+++ b/ms.tex
@@ -537,7 +537,18 @@ depth \anytodo{Right? Right?}.
 We conclude the observed transit signal from EPIC 201555883 is likely the result 
 of an instrumental artifact.
 
-Cite \citet{Coughlin14} and \citet{Batalha13} in here.
+Such effects are not uncommon in \kep\ data. 
+\citet{Batalha13} found $\sim 25$ planet candidates to be false positives based on matching
+ephemerides between candidates. 
+In that paper, the authors limited their search to candidates within $20\arcsec$ of other
+objects of interest. 
+\citet{Coughlin14} expanded on this method, identifying 685 KOIs as false positives and 
+outlining four physical reasons why these anomalies may occur.
+While EPIC 201555883 is likely a false positive, it does not appear that it can neatly be
+explained by any one of the effects described by \citet{Coughlin14} alone. 
+This artifact should be carefully studied in the future, as it may help illuminate other 
+potential detector artifacts, both in \kep\ and \KT\ data.
+
 
 \subsection{Multiple Planet Systems}
 Five of the systems identified by \paperit\ are candidates to be multiply-transiting
@@ -553,9 +564,30 @@ mini-Neptune sized planets.
 Like in the \kep\ field, the false positive rate we measure for the multiple planet sample
 here ($0/10$) is lower than for the single systems \citep{Lissauer12, Rowe14}.
 
-We do not detect any significant transit timing variations 
+
+We do not detect any significant transit timing variations (TTVs) in any of these systems from 
+the \KT\ data alone. 
+EPIC 201338508 would be expected to have a TTV period of 117 days, but 
+is likely too far from commensurability to have an observable TTV signal. 
+EPIC 201445392 is expected to have a TTV period of 234 days, so this system may be a candidate
+for additional follow-up to constrain the system masses dynamically. 
+The transiting planets orbiting EPIC 201754305 are near a 5:2 period commensurability. 
+There is no evidence from \kep\ of an abundance of planets near this period ratio, and so this 
+may be coincidence.
+Follow-up observations may be warranted to search for an additional planet in this system 
+forming a resonant chain, similar to those observed around other stars \citep[e.g.][]{Swift13,
+Campante15}.
 
 \subsection{Systems Orbiting Bright Stars}
+
+One of the primary goals of \KT\ is the detection of transiting planets around bright stars that
+can be followed up from the ground or with future space-based observatories such as JWST 
+\citep{Howell14}. 
+Of our sample, two systems orbit stars with $K < 9$: EPIC 201367065 \citep{Crossfield15} and
+EPIC 201912552. 
+An additional four targets orbit stars with $K <10$. 
+These targets are ideal for ground-based followup, and may be useful targets for Spitzer and 
+JWST to probe planetary atmospheres.
 
 \section{Results and Discussion}
 
