--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1003,6 +1003,36 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{Campante15,
+   author = {{Campante}, T.~L. and {Barclay}, T. and {Swift}, J.~J. and {Huber}, D. and 
+	{Adibekyan}, V.~Z. and {Cochran}, W. and {Burke}, C.~J. and 
+	{Isaacson}, H. and {Quintana}, E.~V. and {Davies}, G.~R. and 
+	{Silva Aguirre}, V. and {Ragozzine}, D. and {Riddle}, R. and 
+	{Baranec}, C. and {Basu}, S. and {Chaplin}, W.~J. and {Christensen-Dalsgaard}, J. and 
+	{Metcalfe}, T.~S. and {Bedding}, T.~R. and {Handberg}, R. and 
+	{Stello}, D. and {Brewer}, J.~M. and {Hekker}, S. and {Karoff}, C. and 
+	{Kolbl}, R. and {Law}, N.~M. and {Lundkvist}, M. and {Miglio}, A. and 
+	{Rowe}, J.~F. and {Santos}, N.~C. and {Van Laerhoven}, C. and 
+	{Arentoft}, T. and {Elsworth}, Y.~P. and {Fischer}, D.~A. and 
+	{Kawaler}, S.~D. and {Kjeldsen}, H. and {Lund}, M.~N. and {Marcy}, G.~W. and 
+	{Sousa}, S.~G. and {Sozzetti}, A. and {White}, T.~R.},
+    title = "{An Ancient Extrasolar System with Five Sub-Earth-size Planets}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1501.06227},
+ primaryClass = "astro-ph.EP",
+ keywords = {Galaxy: disk, planetary systems, stars: individual: HIP 94931, stars: late-type, stars: oscillations, techniques: photometric},
+     year = 2015,
+    month = feb,
+   volume = 799,
+      eid = {170},
+    pages = {170},
+      doi = {10.1088/0004-637X/799/2/170},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...799..170C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @ARTICLE{Campo11,
    author = {{Campo}, C.~J. and {Harrington}, J. and {Hardy}, R.~A. and {Stevenson}, K.~B. and 
